Added services table

--- a/services.html
+++ b/services.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <section>
+            <table class="table table-striped">
+                ...
+              </table>
+        </section>
+    </div>
 </body>
 </html>
